--- a/gui/help.ui
+++ b/gui/help.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>446</width>
-    <height>325</height>
+    <width>500</width>
+    <height>340</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>446</width>
-    <height>325</height>
+    <height>340</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>500</width>
+    <height>340</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -22,8 +28,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>290</y>
+     <x>60</x>
+     <y>300</y>
      <width>421</width>
      <height>21</height>
     </rect>
@@ -43,9 +49,21 @@
     <rect>
      <x>10</x>
      <y>50</y>
-     <width>421</width>
-     <height>231</height>
+     <width>451</width>
+     <height>241</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>241</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>241</height>
+    </size>
    </property>
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
